applications/init/static/trinity/assets/stylesheets/custom.css
.brand {
    font-family: 'Days One', sans-serif !important;
    text-transform: none !important;
}

.main-subheading{
    padding: 0px;
    margin-bottom: 0;
    font-family: 'Raleway',sans-serif;
    font-size: 16px;
    font-weight: 400;
    letter-spacing: 1px;
    line-height: 24px;
}


#standard-header a.brand {
    font-size: 40px;
    color: #4c4c4c;
    line-height: 78px;
}

#intro-header a.brand {
    font-size: 40px;
    color: #ffffff;
    line-height: 78px;
}

.menu a.brand {
    font-size: 24px;
    color: #ffffff;
    line-height: 36px;
}

.menu .intro-nav {
    margin-top: 0;
}

#intro-header .brand-tagline {
    color: #ffffff;
}

#standard-header .brand-tagline,
#intro-header .brand-tagline {
    margin-top: -20px;
    margin-left: 4px;
}


#mastfoot a.brand {
    font-size: 20px;
    color: #e7e7e7;
}

#about .howitworks-box {
}

#about .howitworks-box img {
    height: 200px;
    border-radius: 2%;
}

#about .howitworks-box h3 {
    padding-top: 20px;
}

#intro h1 {
    font-family: 'Raleway',sans-serif;
    font-size: 36px;
    line-height: 42px;
    letter-spacing: 8px;
    font-weight: 600;
    text-transform: uppercase;
    padding: 10px 10px 0 10px;
}

#intro h3{
    font-family: 'Raleway',sans-serif;
    font-size: 24px;
    font-weight: 400;
    letter-spacing: 4px;
    line-height: 36px;
    text-transform: uppercase;
    padding: 0 10px;
}

@media (max-width: 480px) {
    #intro h1 {
        font-size: 10vw;
        line-height: 12vw;
        letter-spacing: 2vw;
        padding-top: 28vw;
    }

    #intro h3 {
        font-size: 6vw;
        line-height: 8vw;
        letter-spacing: 2vw;
    }

    #car-chooser-switcher-buttons {
        padding-left: 40px;
    }
    #mainbox {
        padding-left: 20px;
    }
}

#intro .content {
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center center;
    background-image:url(/init/static/images/rearview_woman_h-flip_lossy_compressed.jpg);
}

#intro-header,
#standard-header,
#standard-footer {
    padding-left: 2%;
    padding-right: 2%;
}

.main-heading {
    font-weight: 600;
}

.intro-nav li > a,
.standard-nav li > a {
    font-weight: 600;
    font-size: 18px;
}

.intro-nav li > a:hover {
    color: #c4c4c4;
}

#intro .btn-cta,
#about .btn-cta,
#request_by_make .btn {
    border:1px solid #ffffff;
    background: #0087C3;
    color: #fff;
    width: auto;
}
#intro .btn-cta:hover,
#about .btn-cta:hover,
#request_by_make .btn:hover {
    border:1px solid #ffffff;
    background: #0067A8;
    color: #fff;
    width: auto;
}

#car-chooser-switcher .btn {
    border:none;
    background: #fff;
    color: #000;
    width: auto;
}
#car-chooser-switcher .btn:hover {
    background: #0067A8;
    color: #fff;
}

#car-chooser-switcher .btn-selected {
    background: #0087C3;
    color: #fff;
}


#standard-footer .foot-logo p {
    color: #e7e7e7;
}

.testimonial{
    background: url('/init/static/trinity/assets/images/testimonials/bg.jpg') 50% 0 no-repeat fixed;
}

.testimonial-wrap > img {
    width: 600px;
    height: 400px;
    border-radius: 5%;
}

@media (max-width: 620px) {
    .testimonial-wrap > img {
        width: 480px;
        height: 320px;
    }
}

@media (max-width: 500px) {
    .testimonial-wrap > img {
        width: 300px;
        height: 200px;
    }
}

.intro-header {
    height: 100px;
    background: rgba(0, 0, 0, 0.2);
    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
    border-bottom: 1px solid #adadad;
}

.standard-header {
    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
    border-bottom: 1px solid #adadad;
}

.foot-logo {
    margin-top: 21px;
}

.footer-nav {
    list-style: none outside none;
    margin: 26px 0 0 0;
    padding: 0;
}
.footer-nav li > a {
    color: #c4c4c4;
}

.footer-nav li {
    display: inline-block;
    float: left;
    margin-left: 16px;
}

.panel {
    border-radius: 0;
}

.menu a {
    color: #eeeeee;
}

/*.form-control {*/
    /*-webkit-appearance: none;*/
    /*-moz-border-radius: 0px;*/
    /*-webkit-border-radius: 0px;*/
    /*border-radius: 0px;*/
/*}*/

#request_by_make .ms-selectable .text-light,
#request_by_make .ms-selection .text-light {
    background-color: #f2f2f2;
}

hr {
    margin: 0;
}

.modal-dialog .modal-content {
    border-radius: 0;
}

.modal-dialog .modal-title {
    padding: 10px;
    font-family: 'Raleway',sans-serif;
    font-weight: 700;
    font-size: 18px;
    letter-spacing: 2px;
    line-height: 1em;
    text-transform: uppercase;
}

.modal-dialog ul li {
    color: #686868;
    font-family: 'Raleway',sans-serif;
    font-size: 16px;
    font-weight: normal;
    line-height: 1.8em;
    padding-bottom: 1em;
}
.modal-dialog ul li i {
    padding: 4px 8px 0 0 ;
}

.modal-dialog .modal-header {
    border-bottom: none;
}

.pad-top-eighth {
    padding-top: 15px;
}
.pad-bottom-eighth {
    padding-bottom: 15px;
}

